Fix single quotes instead of double

--- a/.github/workflows/build-lxc-image.yaml
+++ b/.github/workflows/build-lxc-image.yaml
@@ -29,9 +29,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ env.os }}.sqfs
-          keys: makefile-${{ hashFiles("./Makefile") }}
+          keys: makefile-${{ hashFiles('./Makefile') }}
       - name: Make 'minimal-fs'
-        if: steps.minimal-system.outputs.cache-hit != "true"
+        if: steps.minimal-system.outputs.cache-hit != 'true'
         run: make minimal-fs
   compress_filesystem_readonly:
     name: Compress filesystem read-only
@@ -39,7 +39,7 @@ jobs:
     needs: craft_minimal_system
     steps:
       - name: Make 'squash-fs'
-        if: craft_minimal_system.steps.minimal-system.outputs.cache-git != "true"
+        if: craft_minimal_system.steps.minimal-system.outputs.cache-git != 'true'
         run: make squash-fs
       - name: Upload image
         uses: actions/upload-artifact@v3
@@ -56,9 +56,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ./out
-          keys: sqfs-${{ hashFiles("./${{ env.os }}.sqfs") }}
+          keys: sqfs-${{ hashFiles('./${{ env.os }}.sqfs') }}
       - name: Make target 'build-lxc'
-        if: steps.filesystem-readonly.outputs.cache-hit != "true"
+        if: steps.filesystem-readonly.outputs.cache-hit != 'true'
         run: make build-lxc
       - name: Upload image
         uses: actions/upload-artifact@v3
