--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -6,19 +6,19 @@ env:
   os: mageia
 
 jobs:
-  clean_old_repo:
-    name: Clean old repo
+  clean_stale_repo:
+    name: Clean stale repo
     runs-on: self-hosted
     steps:
-      - name: Clean old repo
-        run: sudo rm -rf .* *
+      - name: Clean stale repo
+        run: sudo rm -rf .* * || true
   clone_repo:
     name: Clone repo
     runs-on: self-hosted
-    needs: clean_old_repo
+    needs: clean_stale_repo
     steps:
       - name: Clone repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
   craft_minimal_system:
     name: Craft minimal system
     runs-on: self-hosted
@@ -26,7 +26,7 @@ jobs:
     steps:
       - name: Cache squash-fs
         id: squash-fs
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ${{ env.os }}.sqfs
           key: ${{ env.os }}.sqfs-${{ hashFiles('./Makefile') }}
@@ -37,7 +37,8 @@ jobs:
         if: steps.squash-fs.outputs.cache-hit != 'true'
         run: make squash-fs
       - name: Upload image
-        uses: actions/upload-artifact@v3
+        if: steps.squash-fs.outputs.cache-hit != 'true'
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ env.os }}.sqfs
           path: ${{ env.os }}.sqfs
@@ -48,7 +49,7 @@ jobs:
     steps:
       - name: Cache build
         id: build
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: |
             ./docker.tar.xz
@@ -57,7 +58,7 @@ jobs:
         if: steps.build.outputs.cache-hit != 'true'
         run: make build-docker
       - name: Upload image
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: image-${{ env.os }}-docker
           path: |
