--- a/mageia.yaml
+++ b/mageia.yaml
@@ -1,6 +1,5 @@
 image:
   distribution: mageia
-  architecture: x86_64
 
 source:
   downloader: rootfs-http
@@ -37,26 +36,17 @@ targets:
         lxc.arch = {{ image.architecture_kernel }}
   incus:
     vm:
-      size: 34359738368
+      size: 4294967296
       filesystem: ext4
 
 files:
 - path: /etc/default/grub
   generator: dump
   content: |-
-    # Set the recordfail timeout
     GRUB_RECORDFAIL_TIMEOUT=0
-
-    # Do not wait on grub prompt
     GRUB_TIMEOUT=0
-
-    # Set the default commandline
     GRUB_CMDLINE_LINUX_DEFAULT="${GRUB_CMDLINE_LINUX_DEFAULT} console=tty1 console=ttyS0"
-
-    # Set the grub console type
     GRUB_TERMINAL=console
-
-    # Disable os-prober
     GRUB_DISABLE_OS_PROBER=true
   types:
   - vm
@@ -98,8 +88,6 @@ files:
 
     [Network]
     DHCP=ipv4
-  variants:
-  - default
   types:
   - container
 
@@ -112,8 +100,6 @@ files:
 
     [Network]
     DHCP=ipv4
-  variants:
-  - default
   types:
   - vm
 
@@ -181,14 +167,11 @@ packages:
     - cpio
     - file
     - findutils
-      #- fipscheck
     - gettext
-      #- glibc-all-langpacks
     - hardlink
     - hostname
     - ipcalc
     - iproute
-      #- iproute-tc
     - iputils
     - kbd
     - kmod
@@ -243,19 +226,7 @@ actions:
     systemctl enable systemd-resolved
     cp -R /etc/skel/.bash* /root/
 
-- trigger: post-packages
-  action: |-
-    #!/bin/sh
     systemctl enable systemd-networkd
-  variants:
-  - default
-
-- trigger: post-packages
-  action: |-
-    #!/bin/sh
-    systemctl enable systemd-networkd
-  variants:
-  - cloud
 
 - trigger: post-packages
   action: |-
@@ -269,7 +240,6 @@ actions:
 - trigger: post-unpack
   action: |-
     #!/bin/sh
-    # Generate machine-id in order for the kernel stuff to be configured properly
     systemd-machine-id-setup
   types:
   - vm
@@ -290,11 +260,6 @@ actions:
     kver=$(ls /boot/initrd*.img | sed -r 's#.*initramfs-(.+)\.img#\1#')
     #dracut --kver "${kver}" -f
 
-    # Unmask all masked unit files
-    for f in $(find /etc/systemd/system -type l); do
-      [ "$(readlink ${f})" = "/dev/null" ] && rm "${f}"
-    done
-
     # Wipe grub environment
     rm -f /boot/EFI/EFI/mageia/grubenv
 
@@ -305,9 +270,9 @@ actions:
 - trigger: post-files
   action: |-
     #!/bin/sh
-    echo "LANG=en_US.UTF-8" > /etc/locale.conf
+    ln -s product.id.Default /etc/product.id
 
-- trigger: post-files
-  action: |-
-    #!/bin/sh
-    # ln -s product.id.Default /etc/product.id
+    # Unmask all masked unit files
+    for f in $(find /etc/systemd/system -type l); do
+      [ "$(readlink ${f})" = "/dev/null" ] && rm "${f}"
+    done
