--- a/mageia.yaml
+++ b/mageia.yaml
@@ -250,28 +250,24 @@ actions:
     set -eux
 
     # Remove the "Container Image" string as this is going to be am VM
-    sed -i 's/[ ]*(Container Image)//;/^VARIANT/d' /etc/os-release
+    #sed -i 's/[ ]*(Container Image)//;/^VARIANT/d' /etc/os-release
 
-    target=/boot/EFI/EFI/mageia/grub.cfg
+    # Regenerate initramfs
+    kver=$(ls /boot/initrd*.img | sed -r 's#.*initrd-(.+)\.img#\1#')
+    dracut --kver "${kver}" -f
+
+    target="$(readlink -f /etc/grub2-efi.cfg)"
     grub2-mkconfig -o "${target}"
     sed -i "s#root=[^ ]*#root=/dev/sda2#g" "${target}"
 
-    # Regenerate initramfs
-    kver=$(ls /boot/initrd*.img | sed -r 's#.*initramfs-(.+)\.img#\1#')
-    #dracut --kver "${kver}" -f
-
-    # Wipe grub environment
+    # Wipe grub environment block
     rm -f /boot/EFI/EFI/mageia/grubenv
-
-    exit 0
   types:
   - vm
 
 - trigger: post-files
   action: |-
     #!/bin/sh
-    ln -s product.id.Default /etc/product.id
-
     # Unmask all masked unit files
     for f in $(find /etc/systemd/system -type l); do
       [ "$(readlink ${f})" = "/dev/null" ] && rm "${f}"
